--- a/.htaccess
+++ b/.htaccess
@@ -6,11 +6,5 @@ Options All -Indexes
 
 <IfModule mod_rewrite.c>
   RewriteEngine On
-  RewriteRule ^$ public/ [L]
-  RewriteRule (.*) public/$1 [L]
-
-  # Redirect to HTTPS
-  # RewriteEngine On
-  # RewriteCond %{HTTPS} off
-  # RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+  RewriteRule ^(.*)$ public/$1 [L,QSA]
 </IfModule>
